k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: simple-ingress
  namespace: simple-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /


spec:
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: simple-svc
            port:
              number: 82
